# spacedock

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.obsidian/: workspace.json
_archive/: spec.md
agents/: ensign.md  first-officer.md
docs/: research-skill-tool-team-restriction.md
mods/: pr-merge.md
references/: claude-ensign-runtime.md  claude-first-officer-runtime.md  code-project-guardrails.md  codex-ensign-runtime.md  codex-first-officer-prompt.md  codex-first-officer-runtime.md  codex-packaged-agents.json  codex-tools.md  codex-worker-prompt.md  ensign-shared-core.md  first-officer-shared-core.md
scripts/: analyze-benchmark.py  codex_finalize_terminal_entity.py  codex_prepare_dispatch.py  fo_inbox_poll.py  generate-variant.sh  release.sh  run_codex_first_officer.sh  run_pytest_tier.py  score-run.py  terminology-benchmark.sh  test-checklist-e2e.sh  test-commission.sh  test-harness.md  test-lib.sh  test_checklist_e2e.py  test_commission.py  test_lib.py  test_lib_interactive.py
templates/: ensign.md  first-officer.md  pr-lieutenant.md  status  validator.md
templates-business/: orchestrator.md  pr-specialist.md  worker.md
templates-functional/: dispatcher.md  executor-pr.md  executor.md
terminologies/: business.map  functional.map
tests/: README.md  conftest.py  spike_termination.py  test-dispatch-names.sh  test-merge-hook-guardrail.sh  test-rejection-flow.sh  test_agent_captain_interaction.py  test_agent_content.py  test_checklist_e2e.py  test_claude_team.py  (+50 more)
(+455 files in other folders)
